Add styles, comments and password check

--- a/KalendriApp/appsettings.json
+++ b/KalendriApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=Kalendri;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
 
     "Logging": {
