--- a/KalendriApp/appsettings.json
+++ b/KalendriApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=Kalendri;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=tcp:kalendri.database.windows.net,1433;Initial Catalog=kalendri;Persist Security Info=False;User ID=aleksander;Password=45123321Aa;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
     "Logging": {
